--- a/t_page.html
+++ b/t_page.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="graduate-photo">
                     <!-- Вставьте своё фото сюда -->
-                    <img src="_T1vtSUJFhc.jpg" alt="Фото выпускника">
+                    <img src="T1vtSUJFhc.jpg" alt="Фото выпускника">
                 </div>
                 </div>
             <div class="line"></div>
